--- a/INDEX.HTML
+++ b/INDEX.HTML
@@ -133,19 +133,62 @@
     <!-- #endregion end of section 3 services -->
 
 
-    <!-- beginning of section4 ABOUT US -->
+    <!-- #region beginning of section4 ABOUT US -->
     <section class="section4 section-about">
         <h1 class="about-title">Haqqımızda</h1>
-        <div class="about-text">
-            <h1>musterilerimizin memnuniyetti bizim ucun inemlidir</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor exercitationem odit cumque impedit
-                debitis velit laborum. Ut similique accusantium illo fugiat rerum dolore. Sint, non porro omnis dolore
-                natus provident!</p>
+        <div class="about-txt-pic">
+
+            <div class="about-text">
+                <h1>musterilerimizin memnuniyetti bizim ucun inemlidir</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Dolor exercitationem odit cumque impedit
+                    debitis veli Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iure maxime nobis, ullam in
+                    eum doloremque placeat non quis quisquam eos quibusdam optio fugiat sequi, velit voluptates! Vitae
+                    tempora labore ut.
+                    t laborum. Ut similique accusantium illo fugiat rerum dolore. Sint, non porro omnis dolore
+                    natus provident!</p>
+                <button class="more-about">Ətraflı</button>
+            </div>
+            <div class="about-pictures">
+                <img src="/images/about us 1.png" alt="">
+                <img src="/images/about-us-2.png" alt="">
+                <img src="/images/about-us-3.png" alt="">
+                <img src="/images/about-us-4.png" alt="">
+            </div>
         </div>
-        <div class="about-pictures"></div>
     </section>
     <!-- #endregion end of section4 ABOUT US -->
 
+    <!-- #region beginning of FOOTER -->
+
+    <footer>
+
+        <div class="foot-div"> <img src="/images/footer-logo.png" alt="">
+        <h2>Biz sizin ekraninizi gozellesdiririk</h2>
+            <h3>Bize zeng edin +(994)055-860-86-16</h3>
+            <p>2022 SpectrTeam Her zaman sizinle</p>
+        </div>
+        <div class="foot-div">
+            <h1>Social</h1>
+            <h5>LinkedIn</h3>
+            <h5>Facebook</h5>
+            <h5>Instagram</h5>
+            <h5>GitHub</h5>
+        </div>
+        <div class="foot-div">
+            <h1>Sirket</h1>
+            <h5>Haqqimizda</h5>
+            <h5>Portfolio</h5>
+            <h5>Blog</h5>
+            <h5>Elaqe</h5>
+        </div>
+        <div class="foot-div">
+            <h2>Abune ol</h2>
+            <h3>Yeniliklerden xeberdar olmaq ucun bize abune olun</h3>
+        </div>
+
+    </footer>
+
+    <!-- #endregion end of FOOTER -->
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous">
